--- a/_includes/google_adsense.html
+++ b/_includes/google_adsense.html
@@ -1,1 +1,1 @@
-{% if site.google_ad_client %}{% include google_analytics.html %}{% endif %} 
+{% if site.data-ad-client %}{% include google_analytics.html %}{% endif %} 
