--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,19 @@
   </head>
 
   <body>
+	<div class="container">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- AypahyoBlogSquare -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-3752345298123340"
+     data-ad-slot="5026932299"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+	</div>
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
