feat: blog now shows circle of doom image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,10 @@
             <p class="site-description">{{ site.description }}</p>
           </div>
 
+          <div class="site-info">
+            <img src="/images/Code_CircleOfDoom.png">
+          </div>
+          
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
