--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -9,5 +9,6 @@
 {% if site.footer-links.rss %}<a href="{{ site.baseurl }}/feed.xml"><i class="svg-icon rss"></i></a>{% endif %}
 {% if site.footer-links.twitter %}<a href="https://www.twitter.com/{{ site.footer-links.twitter }}"><i class="svg-icon twitter"></i></a>{% endif %}
 {% if site.footer-links.stackoverflow %}<a href="http://stackoverflow.com/{{ site.footer-links.stackoverflow }}"><i class="svg-icon stackoverflow"></i></a>{% endif %}
-{% if site.footer-links.youtube %}<a href="https://youtube.com/{{ site.footer-links.youtube }}"><i class="svg-icon youtube"></i></a>{% endif %}
+{% if site.footer-links.youtube1 %}<a href="https://youtube.com/{{ site.footer-links.youtube1 }}"><i class="svg-icon youtube1"></i></a>{% endif %}
+{% if site.footer-links.youtube2 %}<a href="https://youtube.com/{{ site.footer-links.youtube2 }}"><i class="svg-icon youtube2"></i></a>{% endif %}
 {% if site.footer-links.googleplus %}<a href="https://plus.google.com/{{ site.footer-links.googleplus }}"><i class="svg-icon googleplus"></i></a>{% endif %}
